modified readme file

--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -1,5 +1,5 @@
 <div class="mb-3 search">
-  <div class="relative mb-4 flex w-full flex-wrap items-stretch justify-end mr-5 ">
+  <div class="relative mb-4 flex w-full flex-wrap items-stretch justify-end mr-5 p-8">
     <input type="text" class="rounded-md" placeholder="Search" id="username" [(ngModel)]="username"
       placeholder="Enter GitHub username" aria-label="Search" aria-describedby="button-addon3" />
 
