--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,46 +1,51 @@
-<div>
-    <app-user-search (search)="searchUser($event)"></app-user-search>
 
-    <!-- <h1 *ngIf="searchClicked">User Profile:</h1> -->
 
-    <ng-container *ngIf="isValidUser" >
-    
+
+
+
+  <app-header></app-header>
+
+  
+
+  <app-user-search (search)="searchUser($event)"></app-user-search>
+
+  <!-- <h1 *ngIf="searchClicked">User Profile:</h1> -->
+  <div class="w-full px-[10px] lg:px-[90px] flex flex-col lg:flex-row">
+    <div class="w-full lg:w-1/3 pr-8">
+      <ng-container *ngIf="isValidUser">
+
         <app-user-profile [searchedUser]="searchedUser"></app-user-profile>
-    
-    </ng-container>
 
-    <ng-container *ngIf="isInvalidUser">
+      </ng-container>
+
+      <ng-container *ngIf="isInvalidUser">
 
         <p>User not found!</p>
 
-    </ng-container>
-
+      </ng-container>
+    </div>
     <!-- <h1 *ngIf="searchClicked">User Repositories:</h1> -->
 
-    <ng-container *ngIf="isValidUser && totalRepoCount>0">
-      <div  > 
-        <h1><br/>User Repositories:</h1>
+    <div class="w-full lg:w-2/3">
+      <ng-container *ngIf="isValidUser && totalRepoCount>0">
+
+        <h1><br />User Repositories:</h1>
 
         <app-repolist *ngIf="searchClicked" [repos]="repos"></app-repolist>
 
-        <app-pagination *ngIf="totalRepoCount > 0" 
-
-        [totalItems]="totalRepoCount"
-        [itemsPerPage]="itemsPerPage "
-        [currentPage]="currentPage"
-        [itemsPerPageOptions]="itemsPerPageOptions"
-        (pageChange)="changePage($event)"
-        (itemsPerPageChange)="changePerPage($event)">
+        <app-pagination *ngIf="totalRepoCount > 0" [totalItems]="totalRepoCount" [itemsPerPage]="itemsPerPage "
+          [currentPage]="currentPage" [itemsPerPageOptions]="itemsPerPageOptions" (pageChange)="changePage($event)"
+          (itemsPerPageChange)="changePerPage($event)">
 
         </app-pagination>
 
-      </div>
-    </ng-container>
-    
-    <ng-container *ngIf="isValidUser && totalRepoCount==0">
+
+      </ng-container>
+
+      <ng-container *ngIf="isValidUser && totalRepoCount==0">
 
         <p>No repositories found.</p>
 
-    </ng-container>
-
-</div>
+      </ng-container>
+    </div>
+  </div>
