--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -3,7 +3,7 @@
   <div>
     <div>
     <img
-      class="w-[80px] md:w-[80px] lg:w-[300px] border mr-4 lg:my-8 mb-6 rounded-circle self-center"
+      class="w-[80px] md:w-[80px] lg:w-[300px] border-4 mr-4 lg:my-8 mb-6 rounded-circle self-center"
       [src]="searchedUser?.avatar_url"
       alt="Profile Image"
     />
