--- a/src/app/user-search/user-search.component.html
+++ b/src/app/user-search/user-search.component.html
@@ -10,7 +10,7 @@
   />
   <!-- Search Button -->
   <button
-    class="border border-edge-dark mt-0 font-semibold px-4 py-2 ml-2 rounded-lg lg:ml-10"
+    class="border border-edge-dark mt-0 font-semibold px-4 py-2 ml-2 rounded-lg lg:ml-10 bg-sky-900 text-gray-300"
     type="button"
     (click)="onSubmit()"
   >
