added ngx-sekeleton loader dependency (not implemented yet)

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,56 +1,36 @@
-<div>
-    
-  <div>
-    <div>
+<div class="flex flex-col md:flex-row lg:flex-row sm:p-10 self-start bg-gray-100">
+  <!-- Profile Image -->
+  <div id="1" class="lg:w-full md:w-full  p-5">
     <img
-      class="w-[80px] md:w-[80px] lg:w-[300px] border-4 mr-4 lg:my-8 mb-6 rounded-circle self-center"
+      class="w-[300px] self-center"
       [src]="searchedUser?.avatar_url"
       alt="Profile Image"
     />
-    </div>
+  </div>
 
-    <div>
-      <!-- name -->
-      <p class="text-2xl font-semibold mb-2">{{ searchedUser?.name }}</p>
-      <!-- login -->
-      <p
-        class="text-xl mb-2"
-      >
-        {{ searchedUser?.login }}
-      </p>
-    </div>
+  <!-- Profile Details -->
+  <div class="flex flex-col md:w-full lg:w-full p-5 justify-center" id="2">
+    <!-- name -->
+    <p class="text-2xl font-semibold mb-2">Name: {{ searchedUser?.name }}</p>
 
-   </div>
+    <!-- login -->
+    <p class="text-xl mb-2">Username: {{ searchedUser?.login }}</p>
 
-  <!-- profile details -->
-  <div class="flex flex-col">
     <!-- bio -->
-    <p *ngIf="searchedUser?.bio" class="mb-4">{{ searchedUser?.bio }}</p>
+    <p *ngIf="searchedUser?.bio" class="mb-4">Bio: {{ searchedUser?.bio }}</p>
 
     <!-- followers following -->
     <div class="flex items-center text-sm mb-2">
-      <i
-        class="fas fa-users mr-1"></i>
-      <p>
-        {{ searchedUser?.followers || 0 }}
-        <span>followers</span
-        >
-      </p>
+      <i class="fas fa-users mr-1"></i>
+      <p>{{ searchedUser?.followers || 0 }} <span>followers</span></p>
       <span class="mx-2">•</span>
-      <p>
-        {{ searchedUser?.following || 0 }}
-        <span>following</span
-        >
-      </p>
+      <p>{{ searchedUser?.following || 0 }} <span>following</span></p>
     </div>
 
     <!-- location -->
     <div *ngIf="searchedUser?.location" class="flex items-center">
-      <i
-        class="fas fa-location-dot mr-1"></i>
+      <i class="fas fa-location-dot mr-1"></i>
       <span>{{ searchedUser?.location }}</span>
     </div>
-
   </div>
-  
 </div>
