--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
   <app-user-search (search)="searchUser($event)"></app-user-search>
 
   <!-- <h1 *ngIf="searchClicked">User Profile:</h1> -->
-  <div class="w-full px-[10px] lg:px-[90px] flex flex-col lg:flex-row">
-    <div class="w-full lg:w-1/3 pr-8">
+  <div class="w-full px-[10px] lg:px-[90px] flex flex-col lg:flex-col">
+    <div class="w-full">
       <ng-container *ngIf="isValidUser">
 
         <app-user-profile [searchedUser]="searchedUser"></app-user-profile>
@@ -26,7 +26,7 @@
     </div>
     <!-- <h1 *ngIf="searchClicked">User Repositories:</h1> -->
 
-    <div class="w-full lg:w-2/3">
+    <div class="w-full">
       <ng-container *ngIf="isValidUser && totalRepoCount>0">
 
         <h1><br />User Repositories:</h1>
