--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,50 @@
-<div class="grid h-screen ">
-  <div class="font-bold text-3xl text-center mt-5 mb-5 title">
-    Fyle Internship Challenge
+<app-header></app-header>
+
+<!-- Search Component -->
+<app-user-search (search)="searchUser($event)"></app-user-search>
+
+<!-- Display User Profile and Repositories -->
+<div *ngIf="searchClicked" class="w-full px-[10px] lg:px-[90px] flex flex-col lg:flex-col">
+
+  <div class="w-full">
+    <!-- User profile -->
+    <h1 *ngIf="searchClicked" class="font-bold text-2xl underline underline-offset-4">User Profile:</h1>
+
+    <ng-container *ngIf="userLoading; else userLoaded">
+      <app-user-profile-loader></app-user-profile-loader>
+    </ng-container>
+
+    <ng-template #userLoaded>
+      <ng-container *ngIf="isValidUser; else isNotValidUser">
+        <app-user-profile [searchedUser]="searchedUser"></app-user-profile>
+      </ng-container>
+      <ng-template #isNotValidUser>
+        <p>User not found!</p>
+      </ng-template>
+    </ng-template>
+
   </div>
-  <app-user-input (search)="onSearch($event)"></app-user-input>
-  <app-user-details [user]="userInfo"></app-user-details>
-  <app-repo-list [username]="searchedUsername"></app-repo-list>
+
+  <!-- Repo List -->
+  <div class="w-full" id="repolist">
+
+    <!-- Repositories section -->
+    <h1 *ngIf="searchClicked" class="font-bold text-2xl underline underline-offset-4 mb-4">User Repositories:</h1>
+
+    <ng-container *ngIf="reposLoading; else repolist">
+      <ng-container *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+        <app-repolist-loader></app-repolist-loader>
+      </ng-container>
+    </ng-container>
+
+    <ng-template #repolist>
+      <app-repolist *ngIf="searchClicked" [repos]="repos"></app-repolist>
+      <!-- Pagination If Repositories are more than 10 -->
+      <app-pagination *ngIf="totalRepoCount > 0" [totalItems]="totalRepoCount" [itemsPerPage]="itemsPerPage "
+        [currentPage]="currentPage" [itemsPerPageOptions]="itemsPerPageOptions" (pageChange)="changePage($event)"
+        (itemsPerPageChange)="changePerPage($event)">
+      </app-pagination>
+    </ng-template>
+
+  </div>
 </div>
