--- a/src/app/repolist/repolist.component.html
+++ b/src/app/repolist/repolist.component.html
@@ -1,46 +1,27 @@
-<div>
-  <div>
+<div *ngIf="repos.length; else no_repo">
 
+    <ul class="flex flex-wrap gap-4 list-none">
+        <li *ngFor="let repo of repos" class="w-full">
 
-    <div *ngIf="isLoading" class="skeleton-loader"></div>
+            <div class="shadow-md p-4 cursor-pointer border border-edge-dark rounded-md">
 
+                <h3 class="text-xl font-semibold mb-2"><i class="fa-solid fa-file-code"></i> {{ repo.name }}</h3>
+                <p class="text-gray-500 text-sm mb-2">{{ repo.created_at | date : "mediumDate" }}</p>
+                <p class="mb-4">{{ repo.description }}</p>
+                <ng-container *ngIf="repo.topics && repo.topics.length > 0" class="flex">
+                    <span *ngFor="let topic of repo.topics" class="px-2">
+                        {{ topic }}
+                    </span>
+                </ng-container>
 
-    <ul *ngIf="!isLoading" class="m-8">
-
-
-      <div class="flex justify-between">
-        <p class="text-xl">
-          Repositories
-        </p>
-
-        <div class="">
-          <label for="perPageSelect">Repositories per page:</label>
-          <select id="perPageSelect" [(ngModel)]="perPage" (change)="onPerPageChange(perPage)">
-            <option *ngFor="let option of perPageOptions" [value]="option">
-              {{ option }}
-            </option>
-          </select>
-        </div>
-      </div>
-
-      <div class="grid grid-cols-2 gap-4">
-        <li *ngFor="let repo of repos">
-          <div>
-            <p class="text-blue-600 text-xl m-0">{{ repo.name }}</p>
-            <p>{{ repo.description }}</p>
-
-
-            <div *ngIf="repo.topics && repo.topics.length > 0">
-
-              <ul class="topics">
-                <li class="bg-red-500 p-8" *ngFor="let topic of repo.topics">{{ topic }}</li>
-              </ul>
             </div>
-          </div>
+
         </li>
-      </div>
     </ul>
-    <app-pagination [currentPage]="currentPage" [itemsPerPage]="perPage" [totalItems]="totalRepos"
-      (pageChange)="onPageChange($event)"></app-pagination>
-  </div>
+
 </div>
+
+<ng-template #no_repo>
+    <!-- Display a message when no repositories are found -->
+    <p>No repositories found.</p>
+</ng-template>
