--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,11 +1,7 @@
 <div class="flex flex-col md:flex-row lg:flex-row sm:p-10 self-start bg-gray-100">
   <!-- Profile Image -->
-  <div id="1" class="lg:w-full md:w-full  p-5">
-    <img
-      class="w-[300px] self-center"
-      [src]="searchedUser?.avatar_url"
-      alt="Profile Image"
-    />
+  <div id="1" class="lg:w-full md:w-full p-5">
+    <img class="w-[300px] self-center" [src]="searchedUser?.avatar_url" alt="Profile Image" />
   </div>
 
   <!-- Profile Details -->
