--- a/src/app/user-search/user-search.component.html
+++ b/src/app/user-search/user-search.component.html
@@ -1,20 +1,14 @@
 <div>
-    <form class="flex pl-0 lg:pl-8 md:pl-8 items-center lg:space-x-2 pt-3">
-  <!-- GitHub Username Input -->
-  <input
-    class="text-txt-dark font-semibold border rounded-lg px-4 w-60 py-2 md:w-2/3 lg:w-1/2 focus:outline-none focus:border-cyan"
-    type="text"
-    placeholder="Enter GitHub Username"
-    name="username"
-    [(ngModel)]="username"
-  />
-  <!-- Search Button -->
-  <button
-    class="border border-edge-dark mt-0 font-semibold px-4 py-2 ml-2 rounded-lg lg:ml-10 bg-sky-900 text-gray-300"
-    type="button"
-    (click)="onSubmit()"
-  >
-    Search
-  </button>
-</form>
+  <form class="flex pl-0 lg:pl-8 md:pl-8 items-center lg:space-x-2 pt-3">
+    <!-- GitHub Username Input -->
+    <input
+      class="text-txt-dark font-semibold border rounded-lg px-4 w-60 py-2 md:w-2/3 lg:w-1/2 focus:outline-none focus:border-cyan"
+      type="text" placeholder="Enter GitHub Username" name="username" [(ngModel)]="username" />
+    <!-- Search Button -->
+    <button
+      class="border border-edge-dark mt-0 font-semibold px-4 py-2 ml-2 rounded-lg lg:ml-10 bg-sky-900 text-gray-300"
+      type="button" (click)="onSubmit()">
+      Search
+    </button>
+  </form>
 </div>
