--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,51 +1,50 @@
+<app-header></app-header>
 
+<!-- Search Component -->
+<app-user-search (search)="searchUser($event)"></app-user-search>
 
+<!-- Display User Profile and Repositories -->
+<div *ngIf="searchClicked" class="w-full px-[10px] lg:px-[90px] flex flex-col lg:flex-col">
 
+  <div class="w-full">
+    <!-- User profile -->
+    <h1 *ngIf="searchClicked" class="font-bold text-2xl underline underline-offset-4">User Profile:</h1>
 
+    <ng-container *ngIf="userLoading; else userLoaded">
+      <app-user-profile-loader></app-user-profile-loader>
+    </ng-container>
 
-  <app-header></app-header>
-
-  
-
-  <app-user-search (search)="searchUser($event)"></app-user-search>
-
-  <!-- <h1 *ngIf="searchClicked">User Profile:</h1> -->
-  <div class="w-full px-[10px] lg:px-[90px] flex flex-col lg:flex-col">
-    <div class="w-full">
-      <ng-container *ngIf="isValidUser">
-
+    <ng-template #userLoaded>
+      <ng-container *ngIf="isValidUser; else isNotValidUser">
         <app-user-profile [searchedUser]="searchedUser"></app-user-profile>
-
       </ng-container>
-
-      <ng-container *ngIf="isInvalidUser">
-
+      <ng-template #isNotValidUser>
         <p>User not found!</p>
+      </ng-template>
+    </ng-template>
 
-      </ng-container>
-    </div>
-    <!-- <h1 *ngIf="searchClicked">User Repositories:</h1> -->
-
-    <div class="w-full">
-      <ng-container *ngIf="isValidUser && totalRepoCount>0">
-
-        <h1><br />User Repositories:</h1>
-
-        <app-repolist *ngIf="searchClicked" [repos]="repos"></app-repolist>
-
-        <app-pagination *ngIf="totalRepoCount > 0" [totalItems]="totalRepoCount" [itemsPerPage]="itemsPerPage "
-          [currentPage]="currentPage" [itemsPerPageOptions]="itemsPerPageOptions" (pageChange)="changePage($event)"
-          (itemsPerPageChange)="changePerPage($event)">
-
-        </app-pagination>
-
-
-      </ng-container>
-
-      <ng-container *ngIf="isValidUser && totalRepoCount==0">
-
-        <p>No repositories found.</p>
-
-      </ng-container>
-    </div>
   </div>
+
+  <!-- Repo List -->
+  <div class="w-full" id="repolist">
+
+    <!-- Repositories section -->
+    <h1 *ngIf="searchClicked" class="font-bold text-2xl underline underline-offset-4 mb-4">User Repositories:</h1>
+
+    <ng-container *ngIf="reposLoading; else repolist">
+      <ng-container *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+        <app-repolist-loader></app-repolist-loader>
+      </ng-container>
+    </ng-container>
+
+    <ng-template #repolist>
+      <app-repolist *ngIf="searchClicked" [repos]="repos"></app-repolist>
+      <!-- Pagination If Repositories are more than 10 -->
+      <app-pagination *ngIf="totalRepoCount > 0" [totalItems]="totalRepoCount" [itemsPerPage]="itemsPerPage "
+        [currentPage]="currentPage" [itemsPerPageOptions]="itemsPerPageOptions" (pageChange)="changePage($event)"
+        (itemsPerPageChange)="changePerPage($event)">
+      </app-pagination>
+    </ng-template>
+
+  </div>
+</div>
