--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,14 @@
 <header class="w-full flex items-center justify-between top-0 py-3 px-6 border-b z-10 bg-sky-900">
-    <div class="flex items-center justify-between mx-auto my-1">
-        <div>
-          <i class="text-3xl px-2 fa-brands fa-github"></i>
-        </div>
-    
-        <!-- Application Brand name -->
-        <div class="text-xl font-semibold">
-          <h3>
-            GitLand
-          </h3>
-        </div>
-      </div>
+  <div class="flex items-center justify-between mx-auto my-1">
+    <div>
+      <i class="text-3xl px-2 fa-brands fa-github"></i>
+    </div>
+
+    <!-- Application Brand name -->
+    <div class="text-xl font-semibold">
+      <h3>
+        GitFinder
+      </h3>
+    </div>
+  </div>
 </header>
