--- a/src/app/repolist/repolist.component.html
+++ b/src/app/repolist/repolist.component.html
@@ -23,5 +23,7 @@
 
 <ng-template #no_repo>
     <!-- Display a message when no repositories are found -->
-    <p>No repositories found.</p>
+    <p style="color:red; font-weight:bold;font-size:xx-large;text-align:center;margin:auto;margin-bottom:40px">
+        No repositories found!
+      </p>
 </ng-template>
